fixing https issue

--- a/LA_SF/index.html
+++ b/LA_SF/index.html
@@ -7,7 +7,7 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <!-- TopoJSON Source -->
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <!-- Color Brewer -->
@@ -17,7 +17,7 @@
   <body>
     <h1 style = "text-align:center; color:#000000"><bold>Los Angeles County and San Francisco County Neighborhoods</bold></h1>
     <!-- D3.js code -->
-    
+
       <p>Click on the buttons below to change the map data</p>
 
     <script type="text/javascript" src="cities.js"></script>
