--- a/LA_SF/index.html
+++ b/LA_SF/index.html
@@ -9,9 +9,9 @@
     <!-- D3.js Source -->
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <!-- TopoJSON Source -->
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
     <!-- Color Brewer -->
-    <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+    <script src="//d3js.org/colorbrewer.v1.min.js"></script>
   </head>
 
   <body>
