fixed all https issues

--- a/Same_Sex_Marriage/index.html
+++ b/Same_Sex_Marriage/index.html
@@ -8,11 +8,11 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type= "text/javascript" src="//d3js.org/d3.v3.min.js"></script>
     <!-- TopoJSON Source -->
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
     <!-- Color Brewer -->
-    <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+    <script src="//d3js.org/colorbrewer.v1.min.js"></script>
   </head>
 
   <body>
