--- a/USA_Map/index.html
+++ b/USA_Map/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html> 
+<html>
   <head>
     <!-- Meta Tag -->
     <meta charset="utf-8">
     <!-- Title of Webpage -->
-    <title>D3 Geomapping </title> 
+    <title>D3 Geomapping </title>
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v3.min.js"></script>  
+    <script type= "text/javascript" src="//d3js.org/d3.v3.min.js"></script>  
     <script src="http://d3js.org/topojson.v1.min.js"></script>
   </head>
   <body>
@@ -20,10 +20,10 @@
     <script type="text/javascript" src="geoMap.js"></script>
     <!-- Submission Info -->
     <h4>Created by Venkata Karthik Thota </h4>
-      
+
     <h4>Description: Hover over each state to display the statistics of that specific state. For example, placing your cursor over Califonina, a small box will appear with the state name and its estimated population.</h4>
-   
-    <!-- Create a list using <ul> and <li> tag -->   
+
+    <!-- Create a list using <ul> and <li> tag -->
 <!--
     <h4>Files Submitted:</h4>
     <ul>
@@ -34,12 +34,12 @@
       <li>us-states.json</li>
     </ul>
 -->
-      
+
     <h4> Sources: </h4>
     <ul>
       <li>D3: Interactive Data Visualization for the Web</li>
       <li>D3 API Reference</li>
-    </ul> 
+    </ul>
 
   </body>
 </html>
