--- a/Population_vs_Poverty/index.html
+++ b/Population_vs_Poverty/index.html
@@ -7,11 +7,11 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <!-- D3.js Source -->
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> 
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <!-- TopoJSON Source -->
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
     <!-- Color Brewer -->
-    <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+    <script src="//d3js.org/colorbrewer.v1.min.js"></script>
   </head>
 
   <body>
