added pie charts

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="Bar_Chart/index.html" class="collection-item">Bar Chart - Static D3.js Bar Graph of 2012 GDP</a>
             <a href="GDP_Bar_Chart/index.html" class="collection-item">GDP Bar Chart - Animated D3.js Bar Graph of 2012 GDP</a>
             <a href="Line_Chart/index.html" class="collection-item">Line Chart - Animated D3.js Line Chart of Energy Per Capita</a>
+             <a href="Pie_Charts/index.html" class="collection-item">Animated Pie Chart and Donut</a>
             <a href="Scatter_Plot/index.html" class="collection-item">Scatter Plot - A zoomable and dragable scatter plot of Energy Consumption per Capita</a>
             <a href="USA_Map/index.html" class="collection-item">USA Map - A choropleth map of United States's population</a>
             <a href="Population_vs_Poverty/index.html" class="collection-item">California Maps - Side-by-side maps comparing population and poverty</a>
