--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Page Content goes here -->
          <div class="collection">
             <a class="collection-header"><h4>D3 Visualizations by Venkata Karthik Thota</h4></a>
+            <a href="New_York_Income_vs_Poverty/index.html" class="collection-item">New York Maps - Side-by-side comparision of income and poverty in New York</a>
             <a href="Bar_Chart/index.html" class="collection-item">Bar Chart - Static D3.js Bar Graph of 2012 GDP</a>
             <a href="GDP_Bar_Chart/index.html" class="collection-item">GDP Bar Chart - Animated D3.js Bar Graph of 2012 GDP</a>
             <a href="Line_Chart/index.html" class="collection-item">Line Chart - Animated D3.js Line Chart of Energy Per Capita</a>
